# rubric-self-preference

./: README.md  pyproject.toml
checklist_bias/: rubric_subjectivity.py
checklist_bias/results/: rubric_subjectivity.html  rubric_subjectivity.jsonl
ducttape/tasks/: evaluation.tape  generation.tape  main.tape  setup.tape
ducttape/tconfs/: base.tconf  test.tconf
sandbox/: build_dashboard.py  committee.py  dashboard.html  data_loading.py  metrics.py  run_analysis.py
sandbox/hb/: hb_build_dashboard.py  hb_committee.py  hb_data_loading.py  hb_metrics.py  hb_run_analysis.py  hb_scoring.py
sandbox/hb/results/tables/: committee_ref_accuracy_uniform.csv  committee_ref_accuracy_weighted.csv  committee_ref_bias_uniform.csv  committee_ref_bias_weighted.csv  committee_ref_rubric_metrics_weighted.csv  committee_ref_sp_detail_uniform.csv  committee_ref_sp_detail_weighted.csv  mipa_per_judge_uniform.csv  mipa_per_judge_weighted.csv  mipa_uniform.csv  mipa_weighted.csv  mispb_per_judge_uniform.csv  mispb_per_judge_weighted.csv  mispb_uniform.csv  mispb_weighted.csv  mpa_per_judge_uniform.csv  mpa_per_judge_weighted.csv  mra_per_judge_weighted.csv  mrspb_per_judge_uniform.csv  per_generator_deltas_uniform.csv  per_generator_deltas_weighted.csv  rubric_metrics_uniform.csv  system_accuracy_uniform.csv  (+7 more)
sandbox/results/: report.md
sandbox/results/tables/: committee_rubric_metrics.csv  mispb.csv
sandbox/results/tables_golden/: mipa.csv  mipa_per_judge.csv  mispb_per_judge.csv  mra_per_judge.csv  rubric_metrics.csv  system_accuracy.csv  system_scores.csv
(+9 files in other folders)
