[tool.poetry]
name = "checklist_bias"
version = "0.1.0"
description = "Understanding self-preference in checklist-based LLM evaluations."
authors = [
    "José Pombal <j.pombal@swordhealth.com>"
    ]
maintainers = [
    "José Pombal <j.pombal@swordhealth.com>"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
jupyter = "^1.1.1"
jsonargparse = "^4.34.1"
tenacity = "^9.0.0"
litellm = "^1.59.8"
pandas = "^2.3.1"
datasets = "^4.1.0"
google-cloud-aiplatform = "^1.124.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"